syntax = "proto3";
package srp.accounts;

// GET /api/accounts
// Lists all linked Discord accounts for the user
message ListAccountsRequest {
  // No fields needed - uses Authorization header
}

message ListAccountsResponse {
  repeated LinkedAccount accounts = 1;
}

// A linked Discord account (safe to expose to client)
message LinkedAccount {
  string id = 1;                    // Internal account ID
  string username = 2;              // Discord username
  optional string display_name = 3; // Discord display name (global_name)
  optional string avatar_url = 4;   // Full Discord avatar URL
  int64 linked_at = 5;              // Unix timestamp when account was linked
}

