syntax = "proto3";
package srp.auth;

import "common.proto";

// POST /api/auth/start
message AuthStartRequest {
  optional string auth_token = 1;   // Existing token if linking additional account
  optional string client_key = 2;   // Required if auth_token provided
}

message AuthStartResponse {
  string code = 1;                  // Session code (256-bit, base64url)
  string url = 2;                   // Auth link URL
  string sse_url = 3;               // SSE endpoint URL
  int32 expires_in_seconds = 4;     // Time until expiration (300s)
}

// POST /api/auth/complete
message AuthCompleteRequest {
  string code = 1;                  // Session code
  string completion_code = 2;       // 5-digit code from success page
}

message AuthCompleteResponse {
  optional string auth_token = 1;   // New user only
  optional string client_key = 2;   // New user only
}

// SSE Events (JSON-encoded in SSE data field)
message AuthSseEvent {
  AuthEventType type = 1;
  optional AuthCompleteResponse completion = 2;
  optional string error_message = 3;
}

enum AuthEventType {
  AUTH_EVENT_TYPE_UNSPECIFIED = 0;
  AUTH_EVENT_TYPE_HEARTBEAT = 1;
  AUTH_EVENT_TYPE_STARTED = 2;      // User clicked link, flow started
  AUTH_EVENT_TYPE_COMPLETED = 3;
  AUTH_EVENT_TYPE_FAILED = 4;
  AUTH_EVENT_TYPE_EXPIRED = 5;
}

